# mini-vector-search-engine

./: .gitignore  README.md  main.py  pyproject.toml
benchmarking/: benchmark.py  faiss_setup.py  ground_truth.py
engine/: __init__.py  lsh_index.py
utils/: __init__.py  distances.py  embeddings.py
